src/cimgui_ext/include/dcimgui_nodefaultargfunctions.h


typedef struct ImVec2_t ImVec2;
typedef unsigned int ImGuiID;      
typedef unsigned int ImU32;        
typedef struct ImGuiPayload_t ImGuiPayload;                                    
typedef struct ImGuiTableSortSpecs_t ImGuiTableSortSpecs;                      
typedef int ImGuiCond;            
typedef int ImGuiTableBgTarget;   
typedef int ImGuiDragDropFlags;     
typedef int ImGuiTabBarFlags;       
typedef int ImGuiTabItemFlags;      
typedef int ImGuiTableColumnFlags;  
CIMGUI_API void ImGui_PlotLinesCallback(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset , const char* overlay_text , float scale_min , float scale_max , ImVec2 graph_size );
CIMGUI_API void ImGui_PlotHistogramCallback(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset , const char* overlay_text , float scale_min , float scale_max , ImVec2 graph_size );
CIMGUI_API void ImGui_TableSetupColumn(const char* label, ImGuiTableColumnFlags flags , float init_width_or_weight , ImGuiID user_id );
CIMGUI_API void ImGui_TableSetupScrollFreeze(int cols, int rows);  
CIMGUI_API void ImGui_TableHeader(const char* label);              
CIMGUI_API void ImGui_TableHeadersRow(void);                       
CIMGUI_API void ImGui_TableAngledHeadersRow(void);                 
CIMGUI_API ImGuiTableSortSpecs*  ImGui_TableGetSortSpecs(void);                       
CIMGUI_API int                   ImGui_TableGetColumnCount(void);                     
CIMGUI_API int                   ImGui_TableGetColumnIndex(void);                     
CIMGUI_API int                   ImGui_TableGetRowIndex(void);                        
CIMGUI_API const char*           ImGui_TableGetColumnName(int column_n );   
CIMGUI_API ImGuiTableColumnFlags ImGui_TableGetColumnFlags(int column_n );  
CIMGUI_API void                  ImGui_TableSetColumnEnabled(int column_n, bool v);   
CIMGUI_API int                   ImGui_TableGetHoveredColumn(void);                   
CIMGUI_API void                  ImGui_TableSetBgColor(ImGuiTableBgTarget target, ImU32 color, int column_n ); 
CIMGUI_API void  ImGui_Columns(int count , const char* id , bool borders );
CIMGUI_API void  ImGui_NextColumn(void);                                   
CIMGUI_API int   ImGui_GetColumnIndex(void);                               
CIMGUI_API float ImGui_GetColumnWidth(int column_index );        
CIMGUI_API void  ImGui_SetColumnWidth(int column_index, float width);      
CIMGUI_API float ImGui_GetColumnOffset(int column_index );       
CIMGUI_API void  ImGui_SetColumnOffset(int column_index, float offset_x);  
CIMGUI_API int   ImGui_GetColumnsCount(void);
CIMGUI_API bool ImGui_BeginTabBar(const char* str_id, ImGuiTabBarFlags flags );    
CIMGUI_API void ImGui_EndTabBar(void);                                                      
CIMGUI_API bool ImGui_BeginTabItem(const char* label, bool* p_open , ImGuiTabItemFlags flags ); 
CIMGUI_API void ImGui_EndTabItem(void);                                                     
CIMGUI_API bool ImGui_TabItemButton(const char* label, ImGuiTabItemFlags flags );  
CIMGUI_API void ImGui_SetTabItemClosed(const char* tab_or_docked_window_label);             
CIMGUI_API void ImGui_LogToTTY(int auto_open_depth );                                      
CIMGUI_API void ImGui_LogToFile(int auto_open_depth , const char* filename );  
CIMGUI_API void ImGui_LogToClipboard(int auto_open_depth );                                
CIMGUI_API void ImGui_LogFinish(void);                                                               
CIMGUI_API void ImGui_LogButtons(void);                                                              
CIMGUI_API void ImGui_LogTextUnformatted(const char* text);                                          
CIMGUI_API bool                ImGui_BeginDragDropSource(ImGuiDragDropFlags flags );                      
CIMGUI_API bool                ImGui_SetDragDropPayload(const char* type, const void* data, size_t sz, ImGuiCond cond ); 
CIMGUI_API void                ImGui_EndDragDropSource(void);                                                      
CIMGUI_API bool                ImGui_BeginDragDropTarget(void);                                                    
CIMGUI_API const ImGuiPayload* ImGui_AcceptDragDropPayload(const char* type, ImGuiDragDropFlags flags );  
CIMGUI_API void                ImGui_EndDragDropTarget(void);                                                      
typedef enum
{
    ImGuiDragDropFlags_None                     = 0,
    ImGuiDragDropFlags_SourceNoPreviewTooltip   = 1<<0,                                  
    ImGuiDragDropFlags_SourceNoDisableHover     = 1<<1,                                  
    ImGuiDragDropFlags_SourceNoHoldToOpenOthers = 1<<2,                                  
    ImGuiDragDropFlags_SourceAllowNullID        = 1<<3,                                  
    ImGuiDragDropFlags_SourceExtern             = 1<<4,                                  
    ImGuiDragDropFlags_PayloadAutoExpire        = 1<<5,                                  
    ImGuiDragDropFlags_PayloadNoCrossContext    = 1<<6,                                  
    ImGuiDragDropFlags_PayloadNoCrossProcess    = 1<<7,                                  
    ImGuiDragDropFlags_AcceptBeforeDelivery     = 1<<10,                                 
    ImGuiDragDropFlags_AcceptNoDrawDefaultRect  = 1<<11,                                 
    ImGuiDragDropFlags_AcceptNoPreviewTooltip   = 1<<12,                                 
    ImGuiDragDropFlags_AcceptPeekOnly           = ImGuiDragDropFlags_AcceptBeforeDelivery | ImGuiDragDropFlags_AcceptNoDrawDefaultRect, 
#ifndef IMGUI_DISABLE_OBSOLETE_FUNCTIONS
    ImGuiDragDropFlags_SourceAutoExpirePayload  = ImGuiDragDropFlags_PayloadAutoExpire,  
#endif 
} ImGuiDragDropFlags_;
typedef enum
{
    ImGuiTableFlags_None                       = 0,
    ImGuiTableFlags_Resizable                  = 1<<0,   
    ImGuiTableFlags_Reorderable                = 1<<1,   
    ImGuiTableFlags_Hideable                   = 1<<2,   
    ImGuiTableFlags_Sortable                   = 1<<3,   
    ImGuiTableFlags_NoSavedSettings            = 1<<4,   
    ImGuiTableFlags_ContextMenuInBody          = 1<<5,   
    ImGuiTableFlags_RowBg                      = 1<<6,   
    ImGuiTableFlags_BordersInnerH              = 1<<7,   
    ImGuiTableFlags_BordersOuterH              = 1<<8,   
    ImGuiTableFlags_BordersInnerV              = 1<<9,   
    ImGuiTableFlags_BordersOuterV              = 1<<10,  
    ImGuiTableFlags_BordersH                   = ImGuiTableFlags_BordersInnerH | ImGuiTableFlags_BordersOuterH, 
    ImGuiTableFlags_BordersV                   = ImGuiTableFlags_BordersInnerV | ImGuiTableFlags_BordersOuterV, 
    ImGuiTableFlags_BordersInner               = ImGuiTableFlags_BordersInnerV | ImGuiTableFlags_BordersInnerH, 
    ImGuiTableFlags_BordersOuter               = ImGuiTableFlags_BordersOuterV | ImGuiTableFlags_BordersOuterH, 
    ImGuiTableFlags_Borders                    = ImGuiTableFlags_BordersInner | ImGuiTableFlags_BordersOuter, 
    ImGuiTableFlags_NoBordersInBody            = 1<<11,  
    ImGuiTableFlags_NoBordersInBodyUntilResize = 1<<12,  
    ImGuiTableFlags_SizingFixedFit             = 1<<13,  
    ImGuiTableFlags_SizingFixedSame            = 2<<13,  
    ImGuiTableFlags_SizingStretchProp          = 3<<13,  
    ImGuiTableFlags_SizingStretchSame          = 4<<13,  
    ImGuiTableFlags_NoHostExtendX              = 1<<16,  
    ImGuiTableFlags_NoHostExtendY              = 1<<17,  
    ImGuiTableFlags_NoKeepColumnsVisible       = 1<<18,  
    ImGuiTableFlags_PreciseWidths              = 1<<19,  
    ImGuiTableFlags_NoClip                     = 1<<20,  
    ImGuiTableFlags_PadOuterX                  = 1<<21,  
    ImGuiTableFlags_NoPadOuterX                = 1<<22,  
    ImGuiTableFlags_NoPadInnerX                = 1<<23,  
    ImGuiTableFlags_ScrollX                    = 1<<24,  
    ImGuiTableFlags_ScrollY                    = 1<<25,  
    ImGuiTableFlags_SortMulti                  = 1<<26,  
    ImGuiTableFlags_SortTristate               = 1<<27,  
    ImGuiTableFlags_HighlightHoveredColumn     = 1<<28,  
    ImGuiTableFlags_SizingMask_                = ImGuiTableFlags_SizingFixedFit | ImGuiTableFlags_SizingFixedSame | ImGuiTableFlags_SizingStretchProp | ImGuiTableFlags_SizingStretchSame,
} ImGuiTableFlags_;
typedef enum
{
    ImGuiTableColumnFlags_None                 = 0,
    ImGuiTableColumnFlags_Disabled             = 1<<0,   
    ImGuiTableColumnFlags_DefaultHide          = 1<<1,   
    ImGuiTableColumnFlags_DefaultSort          = 1<<2,   
    ImGuiTableColumnFlags_WidthStretch         = 1<<3,   
    ImGuiTableColumnFlags_WidthFixed           = 1<<4,   
    ImGuiTableColumnFlags_NoResize             = 1<<5,   
    ImGuiTableColumnFlags_NoReorder            = 1<<6,   
    ImGuiTableColumnFlags_NoHide               = 1<<7,   
    ImGuiTableColumnFlags_NoClip               = 1<<8,   
    ImGuiTableColumnFlags_NoSort               = 1<<9,   
    ImGuiTableColumnFlags_NoSortAscending      = 1<<10,  
    ImGuiTableColumnFlags_NoSortDescending     = 1<<11,  
    ImGuiTableColumnFlags_NoHeaderLabel        = 1<<12,  
    ImGuiTableColumnFlags_NoHeaderWidth        = 1<<13,  
    ImGuiTableColumnFlags_PreferSortAscending  = 1<<14,  
    ImGuiTableColumnFlags_PreferSortDescending = 1<<15,  
    ImGuiTableColumnFlags_IndentEnable         = 1<<16,  
    ImGuiTableColumnFlags_IndentDisable        = 1<<17,  
    ImGuiTableColumnFlags_AngledHeader         = 1<<18,  
    ImGuiTableColumnFlags_IsEnabled            = 1<<24,  
    ImGuiTableColumnFlags_IsVisible            = 1<<25,  
    ImGuiTableColumnFlags_IsSorted             = 1<<26,  
    ImGuiTableColumnFlags_IsHovered            = 1<<27,  
    ImGuiTableColumnFlags_WidthMask_           = ImGuiTableColumnFlags_WidthStretch | ImGuiTableColumnFlags_WidthFixed,
    ImGuiTableColumnFlags_IndentMask_          = ImGuiTableColumnFlags_IndentEnable | ImGuiTableColumnFlags_IndentDisable,
    ImGuiTableColumnFlags_StatusMask_          = ImGuiTableColumnFlags_IsEnabled | ImGuiTableColumnFlags_IsVisible | ImGuiTableColumnFlags_IsSorted | ImGuiTableColumnFlags_IsHovered,
    ImGuiTableColumnFlags_NoDirectResize_      = 1<<30,  
} ImGuiTableColumnFlags_;
typedef enum
{
    ImGuiTableBgTarget_None   = 0,
    ImGuiTableBgTarget_RowBg0 = 1,  
    ImGuiTableBgTarget_RowBg1 = 2,  
    ImGuiTableBgTarget_CellBg = 3,  
} ImGuiTableBgTarget_;
struct ImGuiTableSortSpecs_t
{
    const ImGuiTableColumnSortSpecs* Specs;       
    int                              SpecsCount;  
    bool                             SpecsDirty;  
};
struct ImGuiPayload_t
{
    void*   Data;            
    int     DataSize;        
    ImGuiID SourceId;        
    ImGuiID SourceParentId;  
    int     DataFrameCount;  
    char    DataType[32+1];  
    bool    Preview;         
    bool    Delivery;        
};