src/Editor/LibreLancer.ImUI/ImGuiBindings/Generated/ImGuiNative.cs


    /// <summary>
    /// <para>Tables: Headers &amp; Columns declaration</para>
    /// <para>- Use TableSetupColumn() to specify label, resizing policy, default width/weight, id, various other flags etc.</para>
    /// <para>- Use TableHeadersRow() to create a header row and automatically submit a TableHeader() for each column.</para>
    /// <para>Headers are required to perform: reordering, sorting, and opening the context menu.</para>
    /// <para>The context menu can also be made available in columns body using ImGuiTableFlags_ContextMenuInBody.</para>
    /// <para>- You may manually submit headers using TableNextRow() + TableHeader() calls, but this is only useful in</para>
    /// <para>some advanced use cases (e.g. adding custom widgets in header row).</para>
    /// - Use TableSetupScrollFreeze() to lock columns/rows so they stay visible when scrolled.
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_TableSetupColumn(byte* label, ImGuiTableColumnFlags flags, float init_width_or_weight, uint user_id);

    /// <summary>
    /// lock columns/rows so they stay visible when scrolled.
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_TableSetupScrollFreeze(int cols, int rows);

    /// <summary>
    /// submit one header cell manually (rarely used)
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_TableHeader(byte* label);

    /// <summary>
    /// submit a row with headers cells based on data provided to TableSetupColumn() + submit context menu
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_TableHeadersRow();

    /// <summary>
    /// submit a row with angled headers for every column with the ImGuiTableColumnFlags_AngledHeader flag. MUST BE FIRST ROW.
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_TableAngledHeadersRow();

    /// <summary>
    /// <para>Tables: Sorting &amp; Miscellaneous functions</para>
    /// <para>- Sorting: call TableGetSortSpecs() to retrieve latest sort specs for the table. NULL when not sorting.</para>
    /// <para>When 'sort_specs-&gt;SpecsDirty == true' you should sort your data. It will be true when sorting specs have</para>
    /// <para>changed since last call, or the first time. Make sure to set 'SpecsDirty = false' after sorting,</para>
    /// <para>else you may wastefully sort your data every frame!</para>
    /// <para>- Functions args 'int column_n' treat the default value of -1 as the same as passing the current column index.</para>
    /// get latest sort specs for the table (NULL if not sorting).  Lifetime: don't hold on this pointer over multiple frames or past any subsequent call to BeginTable().
    /// </summary>
    [DllImport("cimgui")]
    public static extern ImGuiTableSortSpecs* ImGui_TableGetSortSpecs();

    /// <summary>
    /// return number of columns (value passed to BeginTable)
    /// </summary>
    [DllImport("cimgui")]
    public static extern int ImGui_TableGetColumnCount();

    /// <summary>
    /// return current column index.
    /// </summary>
    [DllImport("cimgui")]
    public static extern int ImGui_TableGetColumnIndex();

    /// <summary>
    /// return current row index.
    /// </summary>
    [DllImport("cimgui")]
    public static extern int ImGui_TableGetRowIndex();

    /// <summary>
    /// return "" if column didn't have a name declared by TableSetupColumn(). Pass -1 to use current column.
    /// </summary>
    [DllImport("cimgui")]
    public static extern byte* ImGui_TableGetColumnName(int column_n);

    /// <summary>
    /// return column flags so you can query their Enabled/Visible/Sorted/Hovered status flags. Pass -1 to use current column.
    /// </summary>
    [DllImport("cimgui")]
    public static extern ImGuiTableColumnFlags ImGui_TableGetColumnFlags(int column_n);

    /// <summary>
    /// change user accessible enabled/disabled state of a column. Set to false to hide the column. User can use the context menu to change this themselves (right-click in headers, or right-click in columns body with ImGuiTableFlags_ContextMenuInBody)
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_TableSetColumnEnabled(int column_n, byte v);

    /// <summary>
    /// return hovered column. return -1 when table is not hovered. return columns_count if the unused space at the right of visible columns is hovered. Can also use (TableGetColumnFlags() &amp; ImGuiTableColumnFlags_IsHovered) instead.
    /// </summary>
    [DllImport("cimgui")]
    public static extern int ImGui_TableGetHoveredColumn();

    /// <summary>
    /// change the color of a cell, row, or column. See ImGuiTableBgTarget_ flags for details.
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_TableSetBgColor(ImGuiTableBgTarget target, uint color, int column_n);

    /// <summary>
    /// <para>Legacy Columns API (prefer using Tables!)</para>
    /// - You can also use SameLine(pos_x) to mimic simplified columns.
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_Columns(int count, byte* id, byte borders);

    /// <summary>
    /// next column, defaults to current row or next row if the current row is finished
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_NextColumn();

    /// <summary>
    /// get current column index
    /// </summary>
    [DllImport("cimgui")]
    public static extern int ImGui_GetColumnIndex();

    /// <summary>
    /// get column width (in pixels). pass -1 to use current column
    /// </summary>
    [DllImport("cimgui")]
    public static extern float ImGui_GetColumnWidth(int column_index);

    /// <summary>
    /// set column width (in pixels). pass -1 to use current column
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_SetColumnWidth(int column_index, float width);

    /// <summary>
    /// get position of column line (in pixels, from the left side of the contents region). pass -1 to use current column, otherwise 0..GetColumnsCount() inclusive. column 0 is typically 0.0f
    /// </summary>
    [DllImport("cimgui")]
    public static extern float ImGui_GetColumnOffset(int column_index);

    /// <summary>
    /// set position of column line (in pixels, from the left side of the contents region). pass -1 to use current column
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_SetColumnOffset(int column_index, float offset_x);

    [DllImport("cimgui")]
    public static extern int ImGui_GetColumnsCount();

    /// <summary>
    /// <para>Tab Bars, Tabs</para>
    /// <para>- Note: Tabs are automatically created by the docking system (when in 'docking' branch). Use this to create tab bars/tabs yourself.</para>
    /// create and append into a TabBar
    /// </summary>
    [DllImport("cimgui")]
    public static extern byte ImGui_BeginTabBar(byte* str_id, ImGuiTabBarFlags flags);

    /// <summary>
    /// only call EndTabBar() if BeginTabBar() returns true!
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_EndTabBar();

    /// <summary>
    /// create a Tab. Returns true if the Tab is selected.
    /// </summary>
    [DllImport("cimgui")]
    public static extern byte ImGui_BeginTabItem(byte* label, byte* p_open, ImGuiTabItemFlags flags);

    /// <summary>
    /// only call EndTabItem() if BeginTabItem() returns true!
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_EndTabItem();

    /// <summary>
    /// create a Tab behaving like a button. return true when clicked. cannot be selected in the tab bar.
    /// </summary>
    [DllImport("cimgui")]
    public static extern byte ImGui_TabItemButton(byte* label, ImGuiTabItemFlags flags);

    /// <summary>
    /// notify TabBar or Docking system of a closed tab/window ahead (useful to reduce visual flicker on reorderable tab bars). For tab-bar: call after BeginTabBar() and before Tab submissions. Otherwise call with a window name.
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_SetTabItemClosed(byte* tab_or_docked_window_label);

    /// <summary>
    /// <para>Logging/Capture</para>
    /// <para>- All text output from the interface can be captured into tty/file/clipboard. By default, tree nodes are automatically opened during logging.</para>
    /// start logging to tty (stdout)
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_LogToTTY(int auto_open_depth);

    /// <summary>
    /// start logging to file
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_LogToFile(int auto_open_depth, byte* filename);

    /// <summary>
    /// start logging to OS clipboard
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_LogToClipboard(int auto_open_depth);

    /// <summary>
    /// stop logging (close file, etc.)
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_LogFinish();

    /// <summary>
    /// helper to display buttons for logging to tty/file/clipboard
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_LogButtons();

    /// <summary>
    /// pass text data straight to log (without being displayed)
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_LogTextUnformatted(byte* text);

    /// <summary>
    /// <para>Drag and Drop</para>
    /// <para>- On source items, call BeginDragDropSource(), if it returns true also call SetDragDropPayload() + EndDragDropSource().</para>
    /// <para>- On target candidates, call BeginDragDropTarget(), if it returns true also call AcceptDragDropPayload() + EndDragDropTarget().</para>
    /// <para>- If you stop calling BeginDragDropSource() the payload is preserved however it won't have a preview tooltip (we currently display a fallback "..." tooltip, see #1725)</para>
    /// <para>- An item can be both drag source and drop target.</para>
    /// call after submitting an item which may be dragged. when this return true, you can call SetDragDropPayload() + EndDragDropSource()
    /// </summary>
    [DllImport("cimgui")]
    public static extern byte ImGui_BeginDragDropSource(ImGuiDragDropFlags flags);

    /// <summary>
    /// type is a user defined string of maximum 32 characters. Strings starting with '_' are reserved for dear imgui internal types. Data is copied and held by imgui. Return true when payload has been accepted.
    /// </summary>
    [DllImport("cimgui")]
    public static extern byte ImGui_SetDragDropPayload(byte* type, IntPtr data, nint sz, ImGuiCond cond);

    /// <summary>
    /// only call EndDragDropSource() if BeginDragDropSource() returns true!
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_EndDragDropSource();

    /// <summary>
    /// call after submitting an item that may receive a payload. If this returns true, you can call AcceptDragDropPayload() + EndDragDropTarget()
    /// </summary>
    [DllImport("cimgui")]
    public static extern byte ImGui_BeginDragDropTarget();

    /// <summary>
    /// accept contents of a given type. If ImGuiDragDropFlags_AcceptBeforeDelivery is set you can peek into the payload before the mouse button is released.
    /// </summary>
    [DllImport("cimgui")]
    public static extern ImGuiPayload* ImGui_AcceptDragDropPayload(byte* type, ImGuiDragDropFlags flags);

    /// <summary>
    /// only call EndDragDropTarget() if BeginDragDropTarget() returns true!
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_EndDragDropTarget();
